This resolves Wbondar/techsupport-web#2 and resolves Wbondar/techsupport-web#3.

--- a/src/main/resources/issue.html
+++ b/src/main/resources/issue.html
@@ -2,7 +2,7 @@
   <h2>Issue #${idOfIssue}.</h2>
   <p>${descriptionOfIssue}</p>
   <footer>
-      Issue opened at ${dateIssueIssuedAt} by ${nameOfPartyIssuedBy}.
+      ${footerTextNode}
   </footer>
   <form method='GET' action='${actionOfFormNamedDiscuss}'>
     <input type='hidden' name='issue_id' value='${idOfIssue}' />
