--- a/src/main/resources/form_filter_issues.html
+++ b/src/main/resources/form_filter_issues.html
@@ -1,4 +1,4 @@
-<form method='GET' action=''>
+<form method='GET' action='${action}'>
   <fieldset>
     <legend>Issue filtering and sorting.</legend>
     <label>
