--- a/src/main/resources/form_issue_open.html
+++ b/src/main/resources/form_issue_open.html
@@ -1,4 +1,4 @@
-<form method='POST' action='issue/open'>
+<form method='POST' action='${action}'>
   <input type='hidden' name='party_id' value='${idOfPartyIssuedBy}' />
   <fieldset>
     <legend>
